<resources>
    <string name="app_name">Meritve</string>
    <string name="title_add">Add</string>
    <string name="title_list">List</string>
    <string name="title_profile">Settings</string>

    <string name="labelaIme">Ime</string>
    <string name="labelaPriimek">Priimek</string>
    <string name="labelaEmail">E-Mail</string>
    <string name="labelaTelesnaVisina">Telesna višina</string>
    <string name="labelaenota">Enota:</string>
    <string name="labelavrednost">Vrednost:</string>
    <string name="labelaTipMeritve">Tip meritve:</string>

    <array name="vrsteMeritev" >
        <item>Telesna teža</item>
        <item>Srčni utrip</item>
    </array>

</resources>
