<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".fragments.DodajanjeMeritveFragment">

    <TextView
            android:text="@string/labelaIme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="100dp"/>
    <TextView
            android:text="@string/labelaPriimek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText"
            android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView7" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"/>
    <TextView
            android:text="@string/labelaEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/textView8" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:id="@+id/textView9"/>
    <TextView
            android:text="@string/labelaTelesnaVisina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/textView9" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" android:id="@+id/textView10"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/inputIme"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/inputPriimek"
            app:layout_constraintBottom_toBottomOf="@+id/textView8" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/inputEmail"
            app:layout_constraintBottom_toBottomOf="@+id/textView9" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/inputVisina" app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    <Button
            android:text="@android:string/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gumbVnosProfila"
            app:layout_constraintTop_toBottomOf="@+id/inputVisina"
            app:layout_constraintStart_toStartOf="@+id/inputVisina"/>


</androidx.constraintlayout.widget.ConstraintLayout>