<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".fragments.DodajanjeMeritveFragment">



    <TextView
            android:text="@string/labelaTipMeritve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="100dp"/>

    <TextView
            android:text="@string/labelavrednost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText"
            android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView7" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"/>
    <TextView
            android:text="@string/labelaenota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/textView8" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:id="@+id/textView9"/>


    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inputTipMeritve"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:entries="@array/vrsteMeritev"
    />




    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text=""
            android:ems="10"
            android:id="@+id/inputVrednost"
            app:layout_constraintBottom_toBottomOf="@+id/textView8" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/inputEnote"
            app:layout_constraintBottom_toBottomOf="@+id/textView9" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <Button
            android:text="@android:string/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gumbVnosMeritve"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/inputEnote"
            app:layout_constraintStart_toStartOf="@+id/inputEnote"
            android:layout_marginStart="8dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>